--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -197,28 +197,21 @@ button:focus {
   transform: scale(1.05);
 }
 
+.loader-container {
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0;
+}
+
 .loader {
-  width: 50px;
-  aspect-ratio: 1;
-  display: grid;
-}
-
-.loader::before,
-.loader::after {
-  content: '';
-  grid-area: 1/1;
-  --c: no-repeat radial-gradient(farthest-side, #25b09b 92%, #0000);
-  background: var(--c) 50% 0, var(--c) 50% 100%, var(--c) 100% 50%,
-    var(--c) 0 50%;
-  background-size: 12px 12px;
-  animation: l12 1s infinite;
-}
-
-.loader::before {
-  margin: 4px;
-  filter: hue-rotate(45deg);
-  background-size: 8px 8px;
-  animation-timing-function: linear;
+  font-size: 10px;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  position: relative;
+  text-indent: -9999em;
+  animation: mulShdSpin 1.1s infinite ease;
+  transform: translateZ(0);
 }
 
 @keyframes spin {
